--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-node_modules/ 
-temp/
-upload/
+# OS X
+.DS_Store*
+Icon?
+._*
 
-.DS_Store
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# npm
+node_modules
+*.log
+*.gz
 .env
